--- a/angular.json
+++ b/angular.json
@@ -98,7 +98,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "codeCoverageExclude": [
+              "/**/*mock*.ts"
+          ]
           },
           "configurations": {
             "ci": {
